WICKET-3490 HybridUrlEncoding Strategy throws uncaught NumberFormatException if Integer value space is violated
Return 'null' PageInfo if pageId or versionId is not parseable to Integer.



git-svn-id: https://svn.apache.org/repos/asf/wicket/branches/wicket-1.4.x@1076261 13f79535-47bb-0310-9956-ffa450edef68